--- a/maersk.css
+++ b/maersk.css
@@ -10,7 +10,7 @@
 
 
 #container{
-    height:300px;
+    /* height:300px; */
     display: grid;
     gap: 1px;
     /* grid-template-columns: repeat(3, 1fr); */
